namespace QuartAQuai.Alertes;

public interface IObservateur
{
    void MettreAJour(Incident incident);
}



